--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Architecture | Seguros Bolívar</title>
     
-    <!-- Tailwind y Fuentes -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL,GRAD,opsz@100..700,0..1,-25..0,20..48" rel="stylesheet">
     
-    <!-- Compilador Babel (Necesario para procesar .tsx en el navegador) -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
     <script>
         tailwind.config = {
             darkMode: "class",
@@ -30,29 +25,6 @@
                 }
             }
         }
-
-        // Sistema de diagnóstico de errores
-        window.onerror = function(message, source, lineno, colno, error) {
-            console.error("Critical Runtime Error:", message, error);
-            const root = document.getElementById('root');
-            if (root && root.innerHTML.includes('animate-spin')) {
-                root.innerHTML = `
-                    <div style="padding: 40px; background: white; border: 1px solid #e2e8f0; border-radius: 24px; margin: 40px auto; max-width: 600px; font-family: 'Inter', sans-serif; box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1);">
-                        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-                            <span class="material-symbols-outlined" style="color: #ef4444; font-size: 32px;">error</span>
-                            <h1 style="color: #0f172a; font-size: 20px; font-weight: 800; margin: 0;">Fallo de Inicialización</h1>
-                        </div>
-                        <p style="font-size: 14px; color: #64748b; line-height: 1.6;">La aplicación no pudo arrancar debido a un conflicto de versiones de React en el navegador.</p>
-                        <div style="background: #f8fafc; padding: 16px; font-family: monospace; font-size: 11px; overflow: auto; border-radius: 12px; margin-top: 16px; border: 1px solid #e2e8f0; color: #ef4444;">
-                            ${message}
-                        </div>
-                        <button onclick="location.reload()" style="margin-top: 24px; width: 100%; padding: 12px; background: #004A3B; color: white; border: none; border-radius: 12px; font-weight: 700; cursor: pointer;">
-                            RECARGAR SITIO
-                        </button>
-                    </div>
-                `;
-            }
-        };
     </script>
 
     <style>
@@ -68,19 +40,6 @@
         ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
         ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
-
-    <!-- IMPORTANTE: Se unificaron TODAS las rutas a 18.2.0. El Error #31 ocurre cuando se mezclan v18 y v19 -->
-    <script type="importmap">
-    {
-      "imports": {
-        "react": "https://esm.sh/react@18.2.0",
-        "react-dom": "https://esm.sh/react-dom@18.2.0",
-        "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-        "react/": "https://esm.sh/react@18.2.0/",
-        "react-dom/": "https://esm.sh/react-dom@18.2.0/"
-      }
-    }
-    </script>
 </head>
 <body class="antialiased text-slate-900 overflow-hidden">
     <div id="root">
@@ -94,15 +53,12 @@
                 <div class="flex flex-col items-center gap-2 text-center">
                     <h2 class="font-black text-xl tracking-[0.2em] uppercase">Seguros Bolívar</h2>
                     <div class="h-[2px] w-12 bg-[#D4A056] mb-2 rounded-full"></div>
-                    <p id="loading-text" class="font-bold tracking-widest text-[10px] uppercase opacity-40">Compilando Ecosistema AE...</p>
+                    <p id="loading-text" class="font-bold tracking-widest text-[10px] uppercase opacity-40">Cargando Ecosistema...</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- El script debe ser procesado por Babel para habilitar TSX -->
-    <script type="text/babel" data-type="module">
-        import './index.tsx';
-    </script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
